fix: fix wrong logic to get distinct receiptItem